--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <title></title>
+    <link rel="stylesheet" href="<%= BASE_URL %>css/style.css"/>
+    <link rel="stylesheet" href="<%= BASE_URL %>css/custom.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.0/css/all.min.css"
+          integrity="sha512-gRH0EcIcYBFkQTnbpO8k0WlsD20x5VzjhOA1Og8+ZUAhcMUCvd+APD35FJw3GzHAP3e+mP28YcDJxVr745loHw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
+</head>
+<style>
+
+    .el-input-number.is-controls-right .el-input__inner {
+        text-align: left;
+        padding-left: 15px !important;
+    }
+
+    .el-input__inner {
+        font-family: Poppins !important;
+    }
+
+    /* width */
+    ::-webkit-scrollbar {
+        width: 0px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+        width: 1px !important;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+</style>
+<body>
+<noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+</noscript>
+
+<div id="app"></div>
+<!-- built files will be auto injected -->
+
+<script src="<%= BASE_URL %>vendor/jquery/jquery.min.js"></script>
+<script src="<%= BASE_URL %>vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- SLIDER -->
+<script src="<%= BASE_URL %>js/cookie.min.js" type="text/javascript"></script>
+<!-- Icons -->
+<!-- Main Js -->
+<script src="<%= BASE_URL %>js/scripts.js"></script>
+<script>
+    window.ckname = Cookies.get('csrftoken');
+    console.log(window.ckname)
+</script>
+</body>
 </html>
